--- a/src/css/style.css
+++ b/src/css/style.css
@@ -30,10 +30,14 @@ img{
     flex-wrap: wrap;
 }
 button{
-    background-color: #9faab5;
+    background-color:  #7aa7c7;
+    color: #39739D;
     width: 40px;
     height: 40px;
     margin: 12px;
+}
+button:disabled{
+    background-color: #9faab5;
 }
 .flex{
     height: 402px;
